security config update for heroku